--- a/package.json
+++ b/package.json
@@ -1,23 +1,69 @@
 {
   "name": "feedbackfruits-knowledge-dbpedia-annotator",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "start": "node index.js"
+    "build": "tsc",
+    "clean": "rm -rf lib",
+    "prestart": "npm run build",
+    "start": "node lib",
+    "pretest": "npm run clean && tsc --inlineSourceMap --outDir lib",
+    "test": "nyc ava --verbose",
+    "posttest": "npm run clean && npm run build",
+    "watch-test": "nodemon -w test -x 'npm run test'",
+    "coverage": "codecov",
+    "watch": "nodemon lib"
+  },
+  "nyc": {},
+  "ava": {
+    "files": [
+      "test/**/*.js"
+    ],
+    "source": [
+      "src/**/*.ts"
+    ],
+    "match": [],
+    "concurrency": 5,
+    "failFast": true,
+    "failWithoutAssertions": false,
+    "tap": false,
+    "powerAssert": false,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
   },
   "author": "Steffan Sluis",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^8.0.25",
     "dotenv": "^2.0.0",
-    "memux": "^0.3.1",
+    "feedbackfruits-knowledge-context": "feedbackfruits/feedbackfruits-knowledge-context",
+    "feedbackfruits-knowledge-engine": "github:feedbackfruits/feedbackfruits-knowledge-engine#feature/better-base",
+    "memux": "github:knowledge-express/memux#semver:~0.4.0",
     "node-fetch": "^1.6.3",
     "p-queue": "^0.2.0",
-    "qs": "^6.4.0"
+    "qs": "^6.4.0",
+    "typescript": "^2.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ava": "^0.20.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "codecov": "^1.0.1",
+    "nodemon": "^1.11.0",
+    "nyc": "^11.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/feedbackfruits/feedbackfruits-knowledge-dbpedia-annotator.git"
+  },
+  "engines": {
+    "node": ">= 8",
+    "npm": ">= 5"
   },
   "bugs": {
     "url": "https://github.com/feedbackfruits/feedbackfruits-knowledge-dbpedia-annotator/issues"
