--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^8.0.25",
     "dotenv": "^2.0.0",
     "feedbackfruits-knowledge-context": "feedbackfruits/feedbackfruits-knowledge-context",
-    "feedbackfruits-knowledge-engine": "github:feedbackfruits/feedbackfruits-knowledge-engine#feature/better-base",
+    "feedbackfruits-knowledge-engine": "github:feedbackfruits/feedbackfruits-knowledge-engine#semver:^1.1.0",
     "memux": "github:knowledge-express/memux#semver:~0.4.0",
     "node-fetch": "^1.6.3",
     "p-queue": "^0.2.0",
